# Ros2_img_seg

./: README.md
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
install/erc_rover/lib/erc_rover/: camera  img_segmentation  pipeline_node  position
install/erc_rover/share/erc_rover/: package.bash  package.dsv  package.sh  package.xml  package.zsh
install/erc_rover_interfaces/share/erc_rover_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh  package.xml  package.zsh
install/erc_rover_interfaces/share/erc_rover_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  erc_rover_interfacesConfig-version.cmake  erc_rover_interfacesConfig.cmake  erc_rover_interfaces__rosidl_typesupport_cExport-noconfig.cmake  erc_rover_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  export_erc_rover_interfaces__rosidl_generator_cExport-noconfig.cmake  export_erc_rover_interfaces__rosidl_generator_cExport.cmake  export_erc_rover_interfaces__rosidl_generator_cppExport.cmake  (+6 more)
log/: latest_build
src/erc_rover/: package.xml  setup.cfg  setup.py
src/erc_rover/erc_rover/: camera_integ.py  gps_tracking.py  grounded_sam2_tracking_camera_with_continuous_id.py  new_pipeline.py  position_data.py  qwen_analyzer.py  report_generator.py
src/erc_rover_interfaces/: CMakeLists.txt
src/erc_rover_interfaces/srv/: GetDepth.srv  GetGPS.srv
(+61 files in other folders)
